# Doracmon_uav_ws

./: Dockerfile  setup.bash
devel/: .catkin  local_setup.sh
devel/lib/basic_dev/: basic_dev
devel/lib/pkgconfig/: airsim_ros.pc  basic_dev.pc  uav_flight.pc  uav_takeoff.pc
devel/lib/uav_flight/: uav_flight_node
devel/lib/uav_takeoff/: takeoff_node  uav_takeoff_node
devel/share/airsim_ros/cmake/: airsim_ros-msg-extras.cmake  airsim_ros-msg-paths.cmake  airsim_rosConfig.cmake
devel/share/basic_dev/cmake/: basic_devConfig.cmake
devel/share/gennodejs/ros/airsim_ros/msg/: _index.js
devel/share/gennodejs/ros/airsim_ros/srv/: _index.js
devel/share/roseus/ros/airsim_ros/: manifest.l
devel/share/uav_flight/cmake/: uav_flightConfig.cmake
devel/share/uav_takeoff/cmake/: uav_takeoffConfig.cmake
src/basic_dev/src/: basic_dev.cpp
src/uav_flight/: CMakeLists.txt  package.xml
src/uav_flight/include/uav_flight/: uav_flight.hpp
src/uav_flight/launch/: uav_flight.launch
src/uav_flight/src/: uav_flight.cpp  uav_flight_node.cpp
src/uav_takeoff/: CMakeLists.txt  README.md  package.xml
src/uav_takeoff/include/uav_takeoff/: uav_takeoff.hpp
src/uav_takeoff/launch/: uav_takeoff.launch
src/uav_takeoff/src/: uav_takeoff.cpp  uav_takeoff_node.cpp
