<?xml version="1.0"?>
<package format="2">
  <name>uav_flight</name>
  <version>0.0.1</version>
  <description>
    ROS package for UAV flight control. This package demonstrates a sequence of actions:
    takeoff, forward flight, and landing using AirSim services.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>airsim_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
